[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenes/FluidSimulators/DemoSceneFluidSimulator.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/MouseControl/MouseDetectionControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/DemoScene/DemoScene.gd" type="Script" id=4]
[ext_resource path="res://shaders/MultiplyScreenAndTexture.tres" type="Shader" id=5]
[ext_resource path="res://scenes/Timer/Timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/Quantum Jazz - Intro.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/textures/StrawberryTeaBag.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/TeaKettle.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/WelcomeAndInstructions.ogg" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/HostReturnsAndChecks2.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/WaitingOnAction.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/Closing.ogg" type="AudioStream" id=13]
[ext_resource path="res://assets/audio/CheckTeaStatus.ogg" type="AudioStream" id=14]
[ext_resource path="res://assets/textures/P1020509_Standard.jpg" type="Texture" id=17]

[sub_resource type="Animation" id=54]
resource_name = "Intro"
length = 50.0
tracks/0/type = "value"
tracks/0/path = NodePath("StrawberryTeaBag:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.8, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TeaControl/TeaKettle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.8, 6.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Timer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 15.3, 16.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/CaptionsLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 1.9, 4.3, 7.5, 11.2, 15.1, 16.8, 19.7, 22.3, 23.9, 25.2, 28.5, 29.3, 38.7, 42, 45.2, 49.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "Welcome to the tea party", "Where it's tea time, all the time.", "Here’s a bag of tea and a kettle of boiled water.", "I’m not really sure what your prior experience is with tea, but...", "this is an herbal so you can’t really go too off the rails.", "Here's a timer anyway.", "Now I need to tend to some other recent arrivals,", "but I should be back in like… err…", "Five minutes.", "Don’t hold me to that.", "The timer is for the tea. Not for me.", "Okay?", "", "Just pick up the tea bag and drop it into the water.", " You know, whenever you get relaxed. Relax first. ", "Time is but a concept, and I’m not waiting on you or anything.", "" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HostWelcomeAudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 29.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/TeaBagButton:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 29.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HostWaitingAudioStreamPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 38.7, 49.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/TeaControl/Sprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 632, 296 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/TeaControl/Sprite:region_rect")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 352, 504 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Control/TeaControl/Sprite:region_enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=61]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/CaptionsLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HostReturnsAudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HostWelcomeAudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/TeaControl/TeaKettle:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/Timer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("StrawberryTeaBag:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HostChecksAudioStreamPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HostClosingAudioStreamPlayer:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/TeaControl:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Control/TeaControl/Sprite:region_enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("HostWaitingAudioStreamPlayer:playing")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Control/TeaControl/Sprite:region_rect")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 504, 352, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Control/TeaControl/Sprite:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 632, 592 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Control/TeaControl/Sprite:scale")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=63]
resource_name = "ReturnOfHost"
length = 35.0
tracks/0/type = "value"
tracks/0/path = NodePath("HostReturnsAudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 10.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HostChecksAudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 12, 21.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HostClosingAudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 21.7, 33.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/CaptionsLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 3, 4.2, 6.1, 10.2, 12.1, 13.5, 17.3, 22, 23.4, 24.9, 27, 29.9, 31, 31.8, 33 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "", "Okay I’m back. How long was I?", "8 minutes?", "That's exactly what I said!", "Anyway, that got me all thirsty, so I’m going to help myself here.", "", "Mmmm...", "I didn’t really spend the additional hour programming a check for how long you steeped this", "So I'm just going to assume it’s great and add that feature later.", "That’s all I have for now. ", "I was a bit short on time.", "Hope you enjoyed the experience.", "If this is something you’d like to see more of,", "let me know.", "Alright.", "Thank you!", "Bye bye!" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/TeaControl:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 33.2, 34.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/Timer:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/TeaControl/Sprite:region_enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 10.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/TeaControl/Sprite:region_rect")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 10.2, 11.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 352, 504 ), Rect2( 0, 0, 352, 504 ), Rect2( 0, 504, 352, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/TeaControl/Sprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 10.2, 11.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 632, 296 ), Vector2( 632, 296 ), Vector2( 632, 592 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Control/TeaControl/TeaKettle:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 11.9, 14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "back_to_main_menu"
} ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("HostWelcomeAudioStreamPlayer:playing")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("HostWaitingAudioStreamPlayer:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "method"
tracks/13/path = NodePath("Control/Timer")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=60]
resource_name = "Steeping"
length = 16.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/TeaControl/TeaKettle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/TeaControl/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/TeaControl/MouseDetectionControl:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 456, 48 ), Vector2( 424, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/TeaControl/MouseDetectionControl:rect_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 352, 504 ), Vector2( 416, 600 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HostWelcomeAudioStreamPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HostWaitingAudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/CaptionsLabel:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("FluidSimulator/DyeViewport")

[sub_resource type="ShaderMaterial" id=57]
shader = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=14]
viewport_path = NodePath("FluidSimulator/DyeViewport")

[sub_resource type="StyleBoxEmpty" id=62]

[sub_resource type="StyleBoxEmpty" id=58]

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("FluidSimulator/VelocityForcesViewport")

[sub_resource type="ViewportTexture" id=52]
viewport_path = NodePath("FluidSimulator/DivergenceViewport")

[sub_resource type="ViewportTexture" id=53]
viewport_path = NodePath("FluidSimulator/PressureViewport")

[node name="DemoScene" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="FluidSimulator" parent="." instance=ExtResource( 1 )]

[node name="DemoAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 54 )
anims/RESET = SubResource( 61 )
anims/ReturnOfHost = SubResource( 63 )
anims/Steeping = SubResource( 60 )
__meta__ = {
"_editor_description_": ""
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundPanel" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 6 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="TeaControl" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TeaKettle" type="Sprite" parent="Control/TeaControl"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 632, 296 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Control/TeaControl"]
material = SubResource( 57 )
position = Vector2( 632, 592 )
texture = SubResource( 14 )
region_rect = Rect2( 0, 504, 352, 0 )

[node name="MouseDetectionControl" parent="Control/TeaControl" instance=ExtResource( 3 )]
margin_left = 456.0
margin_top = 48.0
margin_right = -216.0
margin_bottom = -48.0
rect_min_size = Vector2( 352, 504 )

[node name="TeaBagButton" type="Button" parent="Control"]
margin_left = 168.0
margin_top = 288.0
margin_right = 248.0
margin_bottom = 384.0
custom_styles/disabled = SubResource( 62 )
custom_styles/normal = SubResource( 58 )
disabled = true

[node name="VelocitySprite" type="Sprite" parent="Control"]
visible = false
position = Vector2( 512, 88 )
texture = SubResource( 12 )
centered = false

[node name="VelocitySprite2" type="Sprite" parent="Control"]
visible = false
position = Vector2( 512, 88 )
texture = SubResource( 52 )
centered = false

[node name="VelocitySprite4" type="Sprite" parent="Control"]
visible = false
position = Vector2( 512, 88 )
texture = SubResource( 53 )
centered = false

[node name="VelocitySprite3" type="Sprite" parent="Control"]
visible = false
position = Vector2( 512, 88 )
texture = SubResource( 53 )
centered = false

[node name="Timer" parent="Control" instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 120.0
margin_top = 448.0
margin_right = 336.0
margin_bottom = 512.0

[node name="CaptionsLabel" type="Label" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SkipButton" type="Button" parent="Control"]
margin_left = 984.0
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
text = ">>>"

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Music"

[node name="HostWelcomeAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "Host"

[node name="HostWaitingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Host"

[node name="HostReturnsAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Host"

[node name="HostChecksAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "Host"

[node name="HostClosingAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Host"

[node name="StrawberryTeaBag" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 208, 336 )
texture = ExtResource( 8 )

[connection signal="force_applied" from="Control/TeaControl/MouseDetectionControl" to="." method="_on_MouseDetectionControl_force_applied"]
[connection signal="force_released" from="Control/TeaControl/MouseDetectionControl" to="." method="_on_MouseDetectionControl_force_released"]
[connection signal="mouse_exited" from="Control/TeaControl/MouseDetectionControl" to="." method="_on_MouseDetectionControl_mouse_exited"]
[connection signal="button_down" from="Control/TeaBagButton" to="." method="_on_TeaBagButton_button_down"]
[connection signal="minute_passed" from="Control/Timer" to="." method="_on_Timer_minute_passed"]
[connection signal="pressed" from="Control/SkipButton" to="." method="_on_SkipButton_pressed"]
